<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlayList Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_address">nadezhdasakal@yandex.ru</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_user_agreement">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error">Ошибка %d</string>
    <string name="retry_button">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Проиграть</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="playing_time">00:00</string>
    <string name="album_icon">Обложка альбома</string>

    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="label_library">LibraryFragment</string>
    <string name="label_search">SearchFragment</string>
    <string name="label_settings">SettingsFragment</string>
    <string name="label_player">AudioPlayerFragment</string>
    <string name="label_newPlaylistFragment">PlaylistCreatorFragment</string>
    <string name="label_favorites">FavoritesFragment</string>
    <string name="label_playlist_creator">PlaylistCreatorFragment</string>
    <string name="label_playlists">PlaylistsFragment</string>
    <string name="label_bottom_sheet_player">BottomSheetPlayer</string>
    <string name="label_playlist">PlaylistFragment</string>

    <string name="cover">Обложка альбома</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name">Название*</string>

    <string name="playlist">Плейлист</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="added">Добавлено в плейлист %1$s</string>
    <string name="already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="nothing_added">Вы ещё не добавили ни одного трека</string>

    <plurals name="tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="share_playlist">Поделиться</string>
    <string name="information">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="changed">изменен</string>
    <string name="empty_track_list">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="chooser_title">Выберите приложение:</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="deleted">Плейлист удален</string>
    <string name="settings_not_found_app">Не найдено подходящих приложений</string>


</resources>