<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/libraryFragment">
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.sakal.playlistmaker.media_library.ui.fragment.LibraryFragment"
        android:label="@string/label_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_libraryFragment_to_audioPlayer"
            app:destination="@id/audioPlayerActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.sakal.playlistmaker.search.ui.fragment.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_audioPlayer"
            app:destination="@id/audioPlayerActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sakal.playlistmaker.settings.ui.fragment.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/audioPlayerActivity"
        android:name="com.sakal.playlistmaker.player.ui.activity.AudioPlayerActivity"
        android:label="@string/label_player"
        tools:layout="@layout/activity_audioplayer"/>


</navigation>