<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/margin_24"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/toolbar_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/toolbar_color"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_22" />

    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_16">

        <EditText
            android:id="@+id/input_search_form"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/padding_8"
            android:drawableTint="@color/search_form_text_hint_color"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="255"
            android:padding="@dimen/padding_8"
            android:paddingStart="@dimen/padding_12"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:textColor="@color/search_form_text_color"
            android:textColorHint="@color/search_form_text_hint_color" />

        <ImageView
            android:id="@+id/clear_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_16"
            android:visibility="visible"
            android:padding="@dimen/padding_18"
            android:src="@drawable/clear"
            app:tint="@color/search_form_text_hint_color" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_search_recycler" />

        <TextView
            android:id="@+id/placeholderNothingWasFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nothing_found"
            android:textSize="19sp"
            android:textColor="@color/text_color_primary"
            android:textAlignment="center"
            android:drawablePadding="20dp"
            app:drawableTopCompat="@drawable/nothingfound"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/placeholderCommunicationsProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/nointernet"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/connection_problem" />

            <TextView style="@style/ErrorTextPlaceholder"
                android:text="@string/connection_problem"/>

            <TextView style="@style/ErrorTextPlaceholder"
                android:text="@string/check_internet_connection"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_retry"
                style="@style/ErrorButtonPlaceholder"
                android:text="@string/retry_button"
                app:cornerRadius="54dp"/>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
