<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNewPlaylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.sakal.playlistmaker.new_playlist.ui.fragment.NewPlaylistFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/constraintGuide_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/constraintGuide_16" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/panelHeaderToolbar"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cover_playlist_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_24"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/playlist_name_container"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/playlist_cover_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame_dotted_rectangle"
            android:contentDescription="@string/cover"
            android:src="@drawable/placeholder_cover_playlist"
            app:layout_constrainedWidth="true"
            app:layout_constraintDimensionRatio="р, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_playlist_cardview"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        app:hintTextColor="@color/text_not"
        app:boxStrokeColor="@color/text_not_stroke"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_container"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="Описание"
        app:hintTextColor="@color/text_not"
        app:boxStrokeColor="@color/text_not_stroke"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="32dp"
        android:inputType="textCapSentences"
        android:text="@string/create"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_16"
        android:enabled="false"
        android:padding="@dimen/padding_12"
        android:background="@drawable/button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
